--- a/index.html
+++ b/index.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Git Workflow Workshop</title>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <h1 class="some-heading">GIT WORKFLOW WORKSHOP</h1>
-
-</body>
-
-<html/>
+  </body>
+</html>
